# WAREHOUSE-MANAGEMENT

./: MANIFEST.in  package.json  pyproject.toml  requirements.txt  setup.py
warehouse_management/: create_bays.py  hooks.py  modules.txt  patches.txt
warehouse_management/api/: ai_api.py  stock_api.py
warehouse_management/doctype/scan_log/: scan_log.json
warehouse_management/doctype/warehouse_bay/: warehouse_bay.json
warehouse_management/fixtures/: custom_field.json  warehouse_bay.json
warehouse_management/public/css/: wms.css
warehouse_management/public/js/: batch.js  wms.js
warehouse_management/utils/: setup_demo_data.py
warehouse_management/wms_app/doctype/scan_log/: scan_log.json  scan_log.py
warehouse_management/wms_app/doctype/warehouse_bay/: warehouse_bay.json
warehouse_management/wms_app/page/wms_dashboard/: wms_dashboard.js  wms_dashboard.json
warehouse_management/www/wms/: index.html  index.js
warehouse_management/www/wms/assets/: index-11CbDqHo.js  index-1kdndabB.css  index-1rRb8I5u.js  index-38junapX.js  index-Ae7WDNiY.css  index-B61D-KZ6.css  index-B6mrztmt.js  index-B8rnvtot.js  index-B9zUENrU.js  index-BEQYUAU_.js  index-BK2CFyxi.js  index-BM4hJ9eA.js  index-BOZHxNGQ.js  index-Bd2xEiAl.css  index-Bf6XYcqZ.js  index-BizNBOBr.js  index-BtTK3SPB.css  index-C0U-BWQT.css  index-C4Y8EEs-.js  index-CAeQBnVh.js  index-CSZ7vbTt.css  (+16 more)
wms_app/: hooks.py
wms_app/api/: ai_api.py  stock_api.py
wms_app/doctype/warehouse_bay/: warehouse_bay.py
wms_app/utils/: setup_demo_data.py
wms_app/www/wms/: index.css  index.html  index.js
