[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warehouse_management"
authors = [
    { name = "Antigravity", email = "antigravity@gemini.com" }
]
description = "WMS Roll & Bay Stock Tracker"
requires-python = ">=3.10"
license = { text = "MIT" }
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
version = { attr = "warehouse_management.__version__" }
dependencies = { file = ["requirements.txt"] }
